版面修改 #20151201 1.Mail icon 隱藏 2.商品縮圖高度修改，不超過方框為主

--- a/content/shop.html
+++ b/content/shop.html
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
+          	<!--<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>-->
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -66,7 +66,7 @@
         </aside>
           
           <!-- InstanceBeginEditable name="page-main" -->
-              <section id="page_main">
+              <section id="page_main" style="margin-bottom:80px">
                  <h3 class="hidden">商品櫥窗</h3>
                  <div class="bar_tool">
                     <div class="fb-like" data-href="http://www.camomillablu.com/" data-width="150px" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
@@ -75,11 +75,11 @@
                 </div>
                 
                 <section id="box_shop">
-                   <h3 id="shoplist-01">溫和不流淚清潔系列</h3>
+                   <h3 id="shoplist-01" style="margin-top:0">溫和不流淚清潔系列</h3>
                    <ul class="box_productslist">
                       <li><a href="products-CAM304.html">
                               <img src="../images/pic_produce-s04.png" alt="新生肌膚沐浴露">
-                              <h5>新生肌膚沐浴露</h5>
+                              <h5>新生肌膚<br>沐浴露</h5>
                               <p>$520</p>
                           </a>
                       </li>
@@ -91,16 +91,16 @@
                        </li>
                       <li><a href="products-CAM308.html">
                               <img src="../images/pic_produce-s06.png" alt="不流淚精華洗髮露">
-                              <h5>不流淚精華洗髮露</h5>
+                              <h5>不流淚<br>精華洗髮露</h5>
                               <p>$520</p>
                           </a>
                       </li>
-                      <!--<li><a href="products-CAM309.html">
+                      <li><a href="products-CAM309.html">
                               <img src="../images/pic_produce-s07.png" alt="極致呵護泡泡浴露">
-                              <h5>極致呵護泡泡浴露</h5>
+                              <h5>極致呵護<br>泡泡浴露</h5>
                               <p>$520</p>
                           </a>
-                      </li>-->
+                      </li>
                       <!--<li><a href="products-CAM305.html">
                               <img src="../images/pic_produce-s05.png" alt="極致嬰兒護膚修護膏">
                               <h5>極致嬰兒<br>護膚修護膏</h5>
@@ -114,19 +114,19 @@
                    <ul class="box_productslist">
                       <li><a href="products-CAM303.html">
                               <img src="../images/pic_produce-s03.png" alt="精華鎮定潤膚乳液">
-                              <h5>精華鎮定潤膚乳液</h5>
+                              <h5>精華鎮定<br>潤膚乳液</h5>
                               <p>$680</p>
                           </a>
                       </li>
                       <li><a href="products-CAM302.html">
                               <img src="../images/pic_produce-s02.png" alt="天然荷荷芭按摩油">
-                              <h5>天然荷荷芭按摩油</h5>
+                              <h5>天然荷荷芭<br>按摩油</h5>
                               <p>$1280</p>
                           </a>
                       </li>
                       <li><a href="products-CAM301.html">
                               <img src="../images/pic_produce-s01.png" alt="嬰兒護膚修護膏">
-                              <h5>嬰兒護膚修護膏</h5>
+                              <h5>嬰兒護膚<br>修護膏</h5>
                               <p>$680</p>
                           </a>
                       </li>
