--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
+         	<!--<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>-->
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -75,7 +75,7 @@
              	<li>
              		<img src="images/pic_hotsale-05.jpg" alt="新生肌膚沐浴露">
              		<h4>新生肌膚沐浴露</h4>
-             		<p>溫和不流淚配方，一瓶可洗全身，使用於嬰兒泡澡時，用後不需另外沖水。椰子油萃取天然洗淨成份，...</p>
+             		<p>溫和不流淚配方，一瓶可洗全身，使用於嬰兒泡澡時，用後不需另外沖水。椰子油萃取天然洗淨...</p>
              		<a href="content/products-CAM304.html" title="詳細介紹">詳細介紹</a>
              	</li>
              	<!--<li>
