--- a/content/products-CAM309.html
+++ b/content/products-CAM309.html
@@ -40,7 +40,7 @@
        <div id="subnav">
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
-          	<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>
+          	<!--<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>-->
           	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
@@ -100,7 +100,7 @@
                       </div>
                       
                       <div class="box_btn">
-                         <a href="http://www.camomillablushop.com/products/5506d75d5eb034fe85000015" title="立即購買" rel="external" class="btn_buy">立即購買</a>
+                         <a href="http://www.camomillablushop.com/products/%E8%97%8D%E8%89%B2%E6%B4%8B%E7%94%98%E8%8F%8A-%E6%A5%B5%E8%87%B4%E5%91%B5%E8%AD%B7%E6%B3%A1%E6%B3%A1%E6%B5%B4%E9%9C%B2" title="立即購買" rel="external" class="btn_buy">立即購買</a>
                          <a href="shop.html" title="返回上頁" class="btn_back">返回上頁</a>
                       </div>
                       <br class="clean">
