--- a/content/products-SOL003.html
+++ b/content/products-SOL003.html
@@ -32,7 +32,7 @@
          <ul>
            <li><a href="profile.html" title="品牌故事" class="nav-01">品牌故事</a></li>
            <li><a href="shop.html" title="商品櫥窗" class="nav-02 navin">商品櫥窗</a></li>
-           <li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
+           <li><a href="https://www.camomillablushop.com/" title="線上購買" rel="external" class="nav-03">線上購買</a></li>
            <li><a href="contact.html" title="聯絡我們" class="nav-04">聯絡我們</a></li>
          </ul>
          <!-- InstanceEndEditable -->
@@ -41,7 +41,7 @@
           <ul>
           	<li><a href="https://www.facebook.com/camomillablutaiwan" title="Facebook粉絲頁" rel="external" class="subnav-01">Facebook粉絲頁</a></li>
           	<!--<li><a href="mailto:info@axceedtrade.com" title="客服信箱" class="subnav-02">客服信箱</a></li>-->
-          	<li><a href="http://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
+          	<li><a href="https://www.camomillablushop.com/" title="線上購買" rel="external" class="subnav-03">線上購買</a></li>
           </ul>
        </div>
        <br class="clean">
@@ -110,14 +110,14 @@
    </div>
    
    <footer>
-      <p>藍色洋甘菊 版權所有 camomillaBLU.&copy;2015 All RIGHTS RESERVED. Site by <a href="http://www.dr-idesign.com/" title="艾瑟麒有限公司" rel="external">idesign </a>&amp; <a href="http://www.xuedesign.tw/" title="開始設計工作室" rel="external">xuedesign</a>.</p>
+      <p>藍色洋甘菊 版權所有 camomillaBLU.&copy;2015 All RIGHTS RESERVED. Site by <a href="http://www.dr-idesign.com/" title="艾瑟麒有限公司" rel="external">idesign </a>&amp; <a href="https://www.xuedesign.tw/" title="開始設計工作室" rel="external">xuedesign</a>.</p>
       <p class="hidden">製作單位：版面設計+網站製作/ 開始設計工作室 Elmo</p>
       <p></p>
    </footer>
   </div>
 </div>
    
-<script src="http://code.jquery.com/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery.min.js"></script>
 <script src="../script/jquery.lazyload.js"></script>
 <script src="../script/jquery.ui.totop.js"></script>
 <script src="../script/easing.js"></script>
