增加"作品展示"Tag #20170712

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 </head>
 
 <body>
+<div id="myTag">
+    <p>作品展示DemoSite</p>
+</div>
+
 <div id="wrap">
    <h1><a href="index.html" title="返回首頁">藍色洋甘菊camomillaBLU</a></h1>
    <header>
