--- a/content/products-SOL002.html
+++ b/content/products-SOL002.html
@@ -24,6 +24,9 @@
 </head>
 
 <body>
+<div id="myTag">
+    <p>作品展示DemoSite</p>
+</div>
 <div id="wrap">
    <h1><a href="../index.html" title="返回首頁">藍色洋甘菊camomillaBLU</a></h1>
    <header>
